wip: IR Validation